--- a/backend/package.json
+++ b/backend/package.json
@@ -66,6 +66,7 @@
     "slugify": "^1.6.6",
     "stripe": "^18.0.0",
     "tedious": "^18.1.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "ws": "^8.18.0"
   },
